# traffic-sign-recognition

./: .gitignore  README.md  pyproject.toml
notebooks/: export_yolo.ipynb  train_yolo.ipynb
notebooks/yolov5/: train_yolo.ipynb
notebooks/yolov8/: inference_example.ipynb  make_dataset.ipynb  requirements.txt  train_yolo.ipynb
notebooks/yolov8/src/: postprocessing.py  preprocessing.py  traffic_sign_detector.py  utils.py
src/: gradio_app.py  postprocessing.py  preprocessing.py  traffic_sign_detector.py  utils.py
