[tool.poetry]
name = "traffic-sign-recognition"
version = "0.1.0"
description = ""
authors = ["Ildar Azamatov <ildar.azamatov.personal@gmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
gradio = "^4.4.1"
onnxruntime = "^1.16.3"
opencv-python = "^4.8.1.78"
ultralytics = "^8.0.218"
notebook = "^7.0.6"
onnxruntime-gpu = "^1.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
